--- a/.abf.yml
+++ b/.abf.yml
@@ -1,31 +1,31 @@
 sources:
-  "bash-4.2.tar.bz2:"	3f6d4a1cc0128e2ef85b6a6423da1b32449d07b7
-  "binutils-2.22.51.tar.bz2:"	d2af4627299cec98133f3886a7651a832d5e5295
-  "bzip2-1.0.6.tar.bz2:"	4c32c63dc5d72e7ab8be8ac52e4b454c51dbce44
-  "cloog-parma-0.16.1.tar.bz2:"	5b54d012263c07ba4e1c69b6cf0cc19abab418ed
-  "coreutils-8.19.tar.xz:"	b508dd4e21f5dccbdb846a27d9122598f1878a6a
-  "diffutils-3.2.tar.bz2:"	509c389fb4eb9ec5976b83cf6f0280948b0a775c
-  "find-nothing:"	03a2a9514c0a770e800a62a81562dd2f5ad324b2
-  "findutils-4.5.10.tar.bz2:"	4b11010717063b375f0c3dd43b88c8272abbea6c
-  "gawk-4.0.1.tar.xz:"	9be956d124e0c0794836055846aea78d2dc547ad
-  "gcc-linaro-4.7-2012.08.tar.bz2:"	834167b98a841e189d9a6fdeba0edf2fe290ca51
-  "gdb-7.5.tar.bz2:"	79b61152813e5730fa670c89e5fc3c04b670b02c
-  "glibc-2.14-121-g5551a7b.tar.bz2:"	9cf5195c3cec04e9b99a8703c6d10ef2b3fdef4b
-  "gmp-5.0.5.tar.bz2:"	12a662456033e21aed3e318aef4177f4000afe3b
-  "grep-2.14.tar.xz:"	fb6ea404a0ef915334ca6212c7b517432ffe193e
-  "gzip-1.5.tar.xz:"	473aaac6a48445221fd5b03fde52f0236c7486ab
-  "linux-3.5.3.tar.bz2:"	465eb13aaab9f312d945b1ea1b4dea086fa0cf21
-  "make-3.82.tar.bz2:"	a3ea86a970efb0b0ecb3bd0bf1d023fb1f4d16fc
-  "mpc-0.9.tar.bz2:"	0c96f199fd1b86eac619ec713d2d64f1dc7c2566
-  "mpfr-3.1.1.tar.bz2:"	f632d43943ff9f13c184fa13b9a6e8c7f420f4dd
-  "patch-2.6.1.tar.bz2:"	187a3e211d7a77b2a2a91b9831f3a5f98d75bcb5
-  "ppl-0.12.1.tar.bz2:"	1eb8c59e1d7f50899275067e2d46e65122550950
-  "README:"	ff766306bab83df450c40ebf90d206363dacfbdc
-  "sed-4.2.1.tar.bz2:"	71a6f4ddf398e5de78217cea474ba815e0854833
-  "stage2.tar.bz2:"	4b455197efae6774a40b4bc8ccd13d3ec2d8c333
-  "tar-1.26.tar.bz2:"	0015d4f0904071e7cfa86635c0c4c0e238488478
-  "unzip60.tar.bz2:"	603f2660c91ecfd750a85ae1bbab1a656286a28b
-  "util-linux-2.21.2.tar.bz2:"	c10fc31417ee2d01158e50dd0033806b0ae4cb53
-  "which-2.20.tar.bz2:"	1d83022254e4c118653ec4a2a6e13ed26e6ee7c4
-  "xz-5.1.1alpha.tar.bz2:"	6e06b737389fe27f685bc0ae8a684c1bf03b7b78
-  "zlib-1.2.7.tar.bz2:"	858818fe6d358ec682d54ac5e106a2dd62628e7f
+  "bash-4.2.tar.bz2": 3f6d4a1cc0128e2ef85b6a6423da1b32449d07b7
+  "binutils-2.22.51.tar.bz2": d2af4627299cec98133f3886a7651a832d5e5295
+  "bzip2-1.0.6.tar.bz2": 4c32c63dc5d72e7ab8be8ac52e4b454c51dbce44
+  "cloog-parma-0.16.1.tar.bz2": 5b54d012263c07ba4e1c69b6cf0cc19abab418ed
+  "coreutils-8.19.tar.xz": b508dd4e21f5dccbdb846a27d9122598f1878a6a
+  "diffutils-3.2.tar.bz2": 509c389fb4eb9ec5976b83cf6f0280948b0a775c
+  "find-nothing": 03a2a9514c0a770e800a62a81562dd2f5ad324b2
+  "findutils-4.5.10.tar.bz2": 4b11010717063b375f0c3dd43b88c8272abbea6c
+  "gawk-4.0.1.tar.xz": 9be956d124e0c0794836055846aea78d2dc547ad
+  "gcc-linaro-4.7-2012.08.tar.bz2": 834167b98a841e189d9a6fdeba0edf2fe290ca51
+  "gdb-7.5.tar.bz2": 79b61152813e5730fa670c89e5fc3c04b670b02c
+  "glibc-2.14-121-g5551a7b.tar.bz2": 9cf5195c3cec04e9b99a8703c6d10ef2b3fdef4b
+  "gmp-5.0.5.tar.bz2": 12a662456033e21aed3e318aef4177f4000afe3b
+  "grep-2.14.tar.xz": fb6ea404a0ef915334ca6212c7b517432ffe193e
+  "gzip-1.5.tar.xz": 473aaac6a48445221fd5b03fde52f0236c7486ab
+  "linux-3.5.3.tar.bz2": 465eb13aaab9f312d945b1ea1b4dea086fa0cf21
+  "make-3.82.tar.bz2": a3ea86a970efb0b0ecb3bd0bf1d023fb1f4d16fc
+  "mpc-0.9.tar.bz2": 0c96f199fd1b86eac619ec713d2d64f1dc7c2566
+  "mpfr-3.1.1.tar.bz2": f632d43943ff9f13c184fa13b9a6e8c7f420f4dd
+  "patch-2.6.1.tar.bz2": 187a3e211d7a77b2a2a91b9831f3a5f98d75bcb5
+  "ppl-0.12.1.tar.bz2": 1eb8c59e1d7f50899275067e2d46e65122550950
+  "README": ff766306bab83df450c40ebf90d206363dacfbdc
+  "sed-4.2.1.tar.bz2": 71a6f4ddf398e5de78217cea474ba815e0854833
+  "stage2.tar.bz2": 4b455197efae6774a40b4bc8ccd13d3ec2d8c333
+  "tar-1.26.tar.bz2": 0015d4f0904071e7cfa86635c0c4c0e238488478
+  "unzip60.tar.bz2": 603f2660c91ecfd750a85ae1bbab1a656286a28b
+  "util-linux-2.21.2.tar.bz2": c10fc31417ee2d01158e50dd0033806b0ae4cb53
+  "which-2.20.tar.bz2": 1d83022254e4c118653ec4a2a6e13ed26e6ee7c4
+  "xz-5.1.1alpha.tar.bz2": 6e06b737389fe27f685bc0ae8a684c1bf03b7b78
+  "zlib-1.2.7.tar.bz2": 858818fe6d358ec682d54ac5e106a2dd62628e7f
